modulo de recibo, cxp, cxc y banco terminados perdientes de revision

--- a/assets/css/style-custom.css
+++ b/assets/css/style-custom.css
@@ -17,3 +17,12 @@
   padding: 10px;
 }
 
+.inpjs {
+  position: relative; 
+  top: -10px; 
+}
+
+.penalies {
+  background: rgba(252, 100, 100, 0.863);
+}
+
